<resources>
    <string name="app_name">Oruije</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location">Map</string>
    <string name="no_notifications">There seem to be no notifications!</string>
    <string name="search_oruije">Search Oruije</string>
    <string name="title_activity_chat">Chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send message</string>
    <string name="choose_photo_from_gallery">Choose photo from gallery</string>
    <string name="next">NEXT</string>
    <string name="no_friends">You have no friends yet</string>
    <string name="select_image_form_gallery">Select image form gallery</string>
    <string name="select_from_camera">Select from camera</string>
    <string name="camera">Camera</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="multi_post">Multi Post</string>
    <string name="choose_image">Choose Image</string>
    <string name="search">Search...</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>
</resources>
