<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context="com.arana.oruije_messaging.ChooseImage">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/image_preview"
       android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/white_top_stroke"
        android:orientation="horizontal"
        android:paddingBottom="40dp"
        android:padding="5dp"
        android:weightSum="10"
        android:layout_gravity="bottom">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:id="@+id/select_another_image"
            android:contentDescription="@string/choose_photo_from_gallery"
            android:src="@mipmap/photo_library" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:autofillHints="@string/add_a_caption"
            android:background="@null"
            android:hint="@string/add_a_caption"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/small"
            android:maxHeight="70dp"
            android:scrollbars="vertical"
            android:paddingTop="3dp"
            android:id="@+id/caption"
            android:paddingRight="@dimen/small"
            android:paddingBottom="3dp" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="bottom|center"
            android:layout_weight="3"
            android:elevation="10dp"
            android:clickable="true"
            android:layout_marginBottom="@dimen/radius"
            android:id="@+id/upload_image"
            android:background="@color/white"
            android:contentDescription="@string/send_message"
            android:src="@drawable/send_blue" />
    </LinearLayout>

</FrameLayout>
